--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ section{
     width:40%;
     float: left;
     margin-left: 5%;
-    padding-left: 2%;
+    padding-left: 0%;
 }
 h1{
     font-size: 50px;
@@ -61,11 +61,13 @@ h2{
     border-left: 7px solid;
     border-image: linear-gradient(180deg, lightsalmon, tomato);
     border-image-slice: 1;
+    padding-left: 15px;
 }
 #baby-web{
     border-left: 7px solid;
     border-image: linear-gradient(180deg, blue, cyan);
     border-image-slice: 1;
+    padding-left: 15px;
 }
 footer p{
     text-align: center;
