--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ section{
     margin-left: 5%;
     padding-left: 0%;
 }
+.exp{
+    width:30%;
+    height: 1500px;
+    float: left;
+    margin-left: 2%;
+    padding-left: 0%;
+    margin-bottom: 50px;
+}
 h1{
     font-size: 50px;
 }
@@ -55,7 +63,7 @@ h2{
 
 .experience-area div{
     box-shadow: 5px 7px 40px gray;
-    height: 80%;
+    height: 740px;
 }
 #full-stack{
     border-left: 7px solid;
@@ -69,6 +77,41 @@ h2{
     border-image-slice: 1;
     padding-left: 15px;
 }
+#baby-web1{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(255, 0, 0), rgb(255, 0, 157));
+    border-image-slice: 1;
+    padding-left: 15px;
+}
+.exp-img{
+    height: 400px;
+}
+#wcs{
+    text-size-adjust: 50px;
+    text-align: center;
+    color: orange;
+}
+#client{
+    text-size-adjust: 35px;
+    text-align: center;
+    color: purple;
+}
+#review{
+    text-size-adjust: 30px;
+    text-align: center;
+    color: red;
+}
+#massagebox{
+    border: red 1px solid;
+    height: 100px;
+    margin: 0 20%;
+    border-radius: 20px;
+    text-align: center;
+    background-color: rgb(255, 0, 157);
+    color: white;
+}
 footer p{
     text-align: center;
+    margin-top: 20px;
+    padding-top: 20px;
 }
